--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1250,29 +1250,29 @@ $n$
  
  \solution
  برای $ n= 1 , 2$
- به طور بدیهی می‌توان به آرایش خاص در صورت سوال رسید. 
- $ n = 2 \rightarrow { 1, 2} $
+ به طور بدیهی می‌توان جایگشتی ساخت که میانگین هیچ دو عددی بین آن دو عدد دیده نشود. 
+ $$ n = 2 \rightarrow \{ 1, 2 \} $$
  برای n های بزرگ‌تر از ۲، عددها را به دو دسته زوج و فرد تقسیم می‌کنیم و اعداد را مانند الگوریتم زیر می‌چینیم.
  
- برای $ n=3 $ ابتدا اعداد فرد را در سمت چپ و سپس تنها عدد زوج را می‌نویسیم. 
- $ { 1, 3 ,2 } $
- دو عدد فرد را مانند حالت $ n =2 $ می‌نویسیم.
- $ n=2 \rightarrow { 1 ,2 } \rightarrow { 1 ,3 } $
+ برای $ n=3 $ ابتدا اعداد فرد را در سمت چپ و سپس عدد زوج را می‌نویسیم. 
+ $$ n=3 \rightarrow \{ 1, 3 ,2 \} $$
   
- مثالا برای $ n =4 $ نیز، دو دسته زوج و فرد را تشکیل و مانند $ n =2 $ ، سمت چپ و راست، زوج و فردها را می‌نویسیم.
+ برای $ n =4 $ نیز، دو دسته زوج و فرد را تشکیل می‌دهیم و مانند $ n =2 $ ، سمت چپ اعداد فرد و سمت راست اعداد زوج را می‌نویسیم.
  
- برای $ n = 5$  نیز دو دسته زوج و فرد را به ترتیب با ۲ و ۳ عضو تشکیل می‌دهیم و دسته فرد را سمت چپ و زوج‌ها را سمت راست قرار می‌دهیم.‌
- چون می‌دانیم که میانگین عددی زوج و فرد، عددی غیرصحیح می‌شود پس بین دو دسته زوج‌ها و فردها تداخلی نخواهیم داشت.
+ برای $ n = 5 $ نیز، دو دسته زوج و فرد را به ترتیب با ۲ و ۳ عضو تشکیل می‌دهیم و دسته فرد را سمت چپ و دسته زوج‌ را سمت راست قرار می‌دهیم.
+ ‌ 
  
+ اگر به همین ترتیب پیش برویم جایگشت مناسب برای هر عدد را می‌توان با استفاده از اعداد قبل نوشت. پس حکم اثبات شد.
  
+  
  \notes
  
  \refnote{n14}
  
  مثال زدن و تعمیم دادن آن اثبات محسوب نمی‌شود.
  
- \Tnote{n41}
- توضیحات داده شده فقط برای پایه‌ها است و ‌ذکر فرض و حکم استقرا ضروری است.
+ \Enote{n41}
+ همین تفکر گام به گام را می‌توان با استفاده از استقرا بیان کرد. در این صورت باید همه الزامات استقرا اعم از پایه و فرض و حکم استقرا را نوشت و به طور کامل اثبات را پیش برد. در این پاسخ فقط پایه استقرا رعایت شده است. 
  
  
  \solution*{پاسخ صحیح} 
@@ -1287,8 +1287,6 @@ $n$
  
  ب) گام دوم: $ n \rightarrow n-1 $
  
- برای گام اول از مجموعه‌ای استفاده می‌کنیم که در آن $ n = 2^k $ باشد:
- 
  فرض استقرا: $ n = 2^k $ 
  
  حکم استقرا: $n = 2 ^ { k+1 } $ 
@@ -1297,40 +1295,35 @@ $n$
 اثبات: مجموعه‌ی حکم را به دو قسمت زوج‌ها و فردها تقسیم می‌کنیم.
 	\begin{enumerate}
 		\item
-برای زوج‌ها هر عدد را بر دو تقسیم می‌کنیم. به مجموعه‌ی فرض می‌رسیم که شرایط مسئله در آن برقرار است و جایگشتی از اعضا را دارد که در آن چینش میانگین هیچ دو عضوی بینشان نیست. حال
- هر عضو از مجموعه را در دو ضرب می‌کنیم.
-  $n \rightarrow 2n$
+برای زوج‌ها هر عدد را بر دو تقسیم می‌کنیم. به مجموعه‌ی فرض می‌رسیم که شرایط مسئله در آن برقرار است و جایگشتی از اعضا را دارد که در آن چینش میانگین هیچ دو عضوی بینشان نیست. حال این جایگشت را در نظر گرفته و هر عضو را در دو ضرب می‌کنیم.
 
  		\item
 
-برای فردها هر عدد را به علاوه یک و سپس بر دو تقسیم می‌کنیم. به مجموعه‌ی فرض می‌رسیم که شرایط مسئله در آن برقرار است و جایگشتی از اعضا را دارد که در آن چینش میانگین هیچ دو عضوی بینشان نیست.  حال
- هر عضو از مجموعه را در دو ضرب  و منهای یک می‌کنیم.
-$n \rightarrow 2n-1$  
+برای فردها هر عدد را به علاوه یک و سپس بر دو تقسیم می‌کنیم. به مجموعه‌ی فرض می‌رسیم که شرایط مسئله در آن برقرار است و جایگشتی از اعضا را دارد که در آن چینش میانگین هیچ دو عضوی بینشان نیست. حال
+این جایگشت را در نظر گرفته و هر عضو را در دو ضرب  و منهای یک می‌کنیم.
  	\end{enumerate}
  	
  	
  	
 ادعا می‌کنیم مجموعه‌ی حاصل مجموعه‌ی جواب است، هر دو عددی که از مجموعه‌ی زوج‌ها انتخاب کنیم ،میانگینشان هم فقط در دو ضرب شده است و در نتیجه بین آن دو نخواهد بود.
-
-
-هر دو عددی که از مجموعه فردها انتخاب کنیم، میانگنشان در دو ضرب و منهای یک شده است و بنا به فرض بین آن دو نخواهد بود.
-و اگر عددی از فردها و عددی از زوج‌ها را انتخاب کنیم، میانگینشان طبیعی نخواهد بود و جزو شرایط مسئله نیست.
+هر دو عددی که از مجموعه فردها انتخاب کنیم، میانگنشان در دو ضرب و منهای یک شده است و بنا به فرض بین آن دو نخواهد بود. اگر عددی از فردها و عددی از زوج‌ها را انتخاب کنیم، میانگینشان طبیعی نخواهد بود و جزو شرایط مسئله نیست.
 همه‌ی حالت‌ها را بررسی کردیم، پس ادعا صحیح و حکم ثابت می‌شود.
 
 
-در صورتی که $n$ توانی از دو نبود، کوچک‌ترین عدد توان دو بزرگ‌تر از $n$ را به عنوان $n$ در نظر می‌گیریم  و در هنگام چینش اعداد بزرگ‌تر از $n$  را حذف می‌کنیم و چون با حذف یک عضو شرایط مسئله برقرار می‌ماند، حکم ثابت می‌شود.
+با حذف بزرگ‌ترین عدد از مجموعه فرض استقرا می‌توان به جایگشتی از  $n-1 $ عضو رسید به ظوری که میانگین هیچ دو عضوی بینشان نیست. پس در این صورت شرایط سوال برای $n-1 $ برقرار است و حکم استقرا ثابت است. 
+
+
+با شروع از پایه ۲ و با استفاده از گام اول می‌توان حکم را برای همه اعداد توان ۲ ثابت کرد و با استفاده از گام -۱ همه اعداد بین توان های ۲ متوالی را پوشش داد. بنابراین حکم سوال برای تمام اعداد طبیعی برقرار است. 
+
 
 
  	\notes
  	
- 	\Tnote{n42}
+ 	\Enote{n42}
  	به این گونه سوالات که یک گام بزرگ (گام آ) دارد و یک گام معکوسی (گام ب) که کم می‌کند استقرای قهقرایی می‌گویند. در این سوالات حکم را با گام بزرگ اثبات می‌کنیم و با استفاده از گام کوچک از آن کم می‌کنیم تا همه اعداد را پوشش دهیم.
  	
-\Tnote{n43}
+\Enote{n43}
  	 توجه کنید در اثبات‌ها باید با استفاده از گام(ها) و فرض ، حکم را برای همه اعداد طبیعی ثابت کنید.
  	 
- \Enote{n44}
- در استقرا توصیه اکید داریم که از استقرای رو به پایین استفاده کنید، یعنی از حکم استقرا به فرض استقرا برسید. در غیر این صورت باید به تمام شرایط رسیدن فرض به حکم و استفاده از سورها توجه کامل داشت.
- 
 
 \end{document}
