--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1190,7 +1190,12 @@ $n$
     $n$ ها به جز ۲ و ۴ تورنمنتی 
     $-n$ راسی داریم که همه رئوس در آن شاه هستند.    
 \solution
-   {\hspace*{5cm}\includegraphics[height=5cm]{Graph1.jpg}}    
+
+
+پایه ها:
+
+
+   {\hspace*{5cm}\includegraphics[height=5cm]{Graphw.jpg}}    
    
  
    . $G_{n}$ را از روی 
@@ -1212,7 +1217,14 @@ $n$
 ناقص بودن گام استقرا:
 این گام در صورتی صحیح است که $n$ فرد باشد.
 و با توجه به وابستگی اثبات $n$ های فرد به صحیح بودن حکم برای $n$ های زوج, حکم اثبات نمی شود.
+\Tnote {n60}
+حکم برای حالت ۱ و ۳ اثبات نشده است.
 \solution*{پاسخ صحیح}
+
+
+پایه استقرا:
+
+
    {\hspace*{5cm}\includegraphics[height=5cm]{Graph1.jpg}}    
    
    برای $n>6$ ما دو حالت داریم: $\; \; \; \; \; \;$ حالت اول $n$ زوج
@@ -1266,8 +1278,10 @@ $n$
  
   
  \notes
+ \\%dont erase this :)
+\\%dont erase this :)
+ \refnote{n14} 
  
- \refnote{n14}
  
  مثال زدن و تعمیم دادن آن اثبات محسوب نمی‌شود.
  
