--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1198,7 +1198,7 @@ $n$
    {\hspace*{5cm}\includegraphics[height=5cm]{Graphw.jpg}}    
    
  
-   . $G_{n}$ را از روی 
+   $G_{n}$ را از روی 
     $G_{n-1}$ می‌سازیم به این صورت که  $G_{n-1}$ را جفت جفت افراز کرده و اتصال هر جفت با راس جدید را جداگانه بررسی می‌کنیم. جفت راس $i, j$ را در نظر بگیرید که در آن یال $i, j$ از سمت یال $i$ به سمت 
     $j$
      باشد، حال 
@@ -1252,7 +1252,7 @@ $n$
     
     تمامی مسیر‌های $iy, ix, yx, yi, xi, xy$ به طول حداکثر ۲ موجود هستند چون این کار را برای تمام راس‌های $G_{n-2}$ انجام دادیم پس تمام مسیرها به طول حداکثر ۲ موجودند و راس‌ها جدید $y, x$ به تمام راس‌ها یال دارند، پس گراف دلخواه $G_{n}$ را ساختیم.
     
-    چون هم برای $n$های زوج ثابت کردیم و هم برای $n$های زوج ثابت کردیم و پس برای $n$های فرد، پس می‌توان $G_{n}$ را به ازای تمام 
+    چون هم برای $n$های زوج ثابت کردیم و هم برای $n$ های فرد، پس می‌توان $G_{n}$ را به ازای تمام 
     $n>6$ ساخت.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% question 4.3 %%%%%%%%%%%%%%%%%%%%%%%%%%%
