add some notes of chapter 0

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -44,6 +44,7 @@
 دسته $T$: دام های آموزشی و خطاهای رایج در حل سوالات.
 
 \end{enumerate}
+
 \chapter*{شمارش}
 
 %% question 1
@@ -1331,13 +1332,52 @@ $n$
 
 
 
- 	\notes
+ \notes
  	
- 	\Enote{n42}
+ \Enote{n42}
  	به این گونه سوالات که یک گام بزرگ (گام آ) دارد و یک گام معکوسی (گام ب) که کم می‌کند استقرای قهقرایی می‌گویند. در این سوالات حکم را با گام بزرگ اثبات می‌کنیم و با استفاده از گام کوچک از آن کم می‌کنیم تا همه اعداد را پوشش دهیم.
  	
 \Enote{n43}
  	 توجه کنید در اثبات‌ها باید با استفاده از گام(ها) و فرض ، حکم را برای همه اعداد طبیعی ثابت کنید.
  	 
+ 	 
+\chapter*{0}
+\notes
+\Nnote{n44}
+در حل سوالات توجه کنید هر گزاره، فرمول، اتحاد و... که درستی آن‌ها اثبات شده است  باید رفرنس معتبر آن ‌ذکر شود‌. این رفرنس می‌توان اسم عام آن، آدرس سوال و تمرینی که قبلا داده شده، مطالب داخل کلاس و جزوه و... باشد. 
 
+\Enote{n45}
+در طول اثبات توصیه اکید می‌شود از کلمه «بدیهی است» استفاده نکنید. حتی در مسیر یافتن جواب هم در ذهن خود بسپارید هیج چیز بدیهی نیست، یا نیاز به اثبات دارد یا قبلا اثبات شده است 
+\refnote{n44}.
+به عبارتی برای هر جمله به سوال «چرا؟» پاسخ دهید.
+چرا؟ :)
+
+چون استفاده از بعضی از جملات اعم از بدیهی است و مواردی که اشاره خواهیم کرد در طول اثبات باعث کژفهمی کلیت اثبات یا کامل به نظر رسیدن اثباتی ناقص و یا حتی غلط می‌شود. 
+
+\Nnote{n45}
+یکی از چراغ خطرهای در طول اثبات استفاده از «و .../و غیره/...» است. این کلمات به خودی خود بد نیستند، اما زمانی که ما می‌توانیم از علایم اختصاری استفاده کنیم اثبات ما تمیزتر و خواناتر و به طور حتم به دور از ابهام می‌شود.
+برای شفاف شدن موضوع به دو مثال زیر توجه کنید:
+
+\begin{enumerate}
+\item
+دنباله «۲و ۴و ۶و ...» را داریم.
+
+«و ...» نشان دهنده چه جملاتی در دنباله است؟
+
+آیا منظور دنباله $a_n =2n $ است؟
+
+یا دنباله $a_n = a_{n-1} + a_{n-2} ,  a_0=2 , a_1=4$ ؟
+
+یا دنباله $ a_n = 2n + (1-n)^3(2-n)^2(3-n) $ ؟ 
+\item
+s
+را در نظر می‌گیریم $ a_1 + a_2 + ... + a_n $. 
+
+زیباتر است بنویسیم :
+$ s = \sum_{i=1}^{n} {a_i} $
+
+\end{enumerate}
+
+\Nnote{n46}
+تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید و در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا و نظریه اعداد حتما اصول را رعایت کنید.
 \end{document}
