add chapter 0 part2

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1380,4 +1380,16 @@ $ s = \sum_{i=1}^{n} {a_i} $
 
 \Nnote{n46}
 تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید و در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا و نظریه اعداد حتما اصول را رعایت کنید.
+
+\Enote{n47}
+از نوشتن عبارت هایی مثل "بهترین حالت این است که" یا "در بدترین حالت داریم که..." پرهیز کنید. توجه کنید که بهترین و بدترین و مفاهیمی از این دست, در ریاضیات معنایی ندارند مگر آن که آن‌ها را تعریف کنید و توضیح بدهید که چرا در نظر گرفتن این حالت به حل مسئله کمک می‌کند.
+
+\Nnote{n48}
+بهتر است در صورتی که در اثبات خود از روش یا ایده مشخص و شناخته شده‌ای استفاده می‌کنید, (مثل ناوردایی - استقرا - برهان خلف - دوگانه شماری و...)آن را ذکر کنید تا دنبال کردن اثبات شما برای خواننده راحت تر بشود و اثبات شما را بهتر متوجه بشود.
+
+\Enote{n49}
+اگر در نوشتن اثبات از رسم شکل استفاده می‌کنید, حذف کردن شکل نباید باعث ناقص شدن اثبات شما بشود, به عبارت دیگر شکل تنها باید به فهم بهتر اثبات کمک کند و نباید مستقیما برای اثبات استفاده شود
+
+%\Enote(n50)
+%استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود
 \end{document}
