--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1344,15 +1344,14 @@ $n$
 \chapter*{0}
 \notes
 \Nnote{n44}
-در حل سوالات توجه کنید هر گزاره، فرمول، اتحاد و... که درستی آن‌ها اثبات شده است  باید رفرنس معتبر آن ‌ذکر شود‌. این رفرنس می‌توان اسم عام آن، آدرس سوال و تمرینی که قبلا داده شده، مطالب داخل کلاس و جزوه و... باشد. 
+در حل سوالات توجه کنید هر گزاره، فرمول، اتحاد و... که درستی آن‌ها اثبات شده است  باید منبع معتبر آن ‌ذکر شود‌. این منابع می‌توان اسم عام آن، آدرس سوال و تمرینی که قبلا داده شده، مطالب داخل کلاس، جزوه و... باشد. 
 
 \Enote{n45}
-در طول اثبات توصیه اکید می‌شود از کلمه «بدیهی است» استفاده نکنید. حتی در مسیر یافتن جواب هم در ذهن خود بسپارید هیج چیز بدیهی نیست، یا نیاز به اثبات دارد یا قبلا اثبات شده است 
+در طول اثبات توصیه اکید می‌شود از کلمه «بدیهی است» استفاده نکنید. حتی در مسیر یافتن جواب هم در ذهن خود بسپارید هیج چیز بدیهی نیست، یا نیاز به اثبات دارد یا قبلا اثبات شده است یا از اصول و تعاریف پایه است 
 \refnote{n44}.
 به عبارتی برای هر جمله به سوال «چرا؟» پاسخ دهید.
 چرا؟ :)
-
-چون استفاده از بعضی از جملات اعم از بدیهی است و مواردی که اشاره خواهیم کرد در طول اثبات باعث کژفهمی کلیت اثبات یا کامل به نظر رسیدن اثباتی ناقص و یا حتی غلط می‌شود. 
+چون استفاده از بعضی از جملات اعم از «بدیهی است» و مواردی که اشاره خواهیم کرد در طول اثبات باعث کژفهمی کلیت اثبات یا کامل به نظر رسیدن اثباتی ناقص و یا حتی غلط می‌شود. 
 
 \Nnote{n45}
 یکی از چراغ خطرهای در طول اثبات استفاده از «و .../و غیره/...» است. این کلمات به خودی خود بد نیستند، اما زمانی که ما می‌توانیم از علایم اختصاری استفاده کنیم اثبات ما تمیزتر و خواناتر و به طور حتم به دور از ابهام می‌شود.
@@ -1379,7 +1378,7 @@ $ s = \sum_{i=1}^{n} {a_i} $
 \end{enumerate}
 
 \Nnote{n46}
-تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید و در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا و نظریه اعداد حتما اصول را رعایت کنید.
+تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید یا به شکل عبارات و معادلات ریاضی بنویسید. در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا و نظریه اعداد حتما اصول را رعایت کنید.
 
 \Enote{n47}
 از نوشتن عبارت هایی مثل "بهترین حالت این است که" یا "در بدترین حالت داریم که..." پرهیز کنید. توجه کنید که بهترین و بدترین و مفاهیمی از این دست, در ریاضیات معنایی ندارند مگر آن که آن‌ها را تعریف کنید و توضیح بدهید که چرا در نظر گرفتن این حالت به حل مسئله کمک می‌کند.
