--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1341,7 +1341,8 @@ $n$
  	 توجه کنید در اثبات‌ها باید با استفاده از گام(ها) و فرض ، حکم را برای همه اعداد طبیعی ثابت کنید.
  	 
  	 
-\chapter*{0}
+\chapter*{
+نکات نوشتار}
 \notes
 \Nnote{n44}
 در حل سوالات توجه کنید هر گزاره، فرمول، اتحاد و... که درستی آن‌ها اثبات شده است  باید منبع معتبر آن ‌ذکر شود‌. این منابع می‌توان اسم عام آن، آدرس سوال و تمرینی که قبلا داده شده، مطالب داخل کلاس، جزوه و... باشد. 
@@ -1352,6 +1353,10 @@ $n$
 به عبارتی برای هر جمله به سوال «چرا؟» پاسخ دهید.
 چرا؟ :)
 چون استفاده از بعضی از جملات اعم از «بدیهی است» و مواردی که اشاره خواهیم کرد در طول اثبات باعث کژفهمی کلیت اثبات یا کامل به نظر رسیدن اثباتی ناقص و یا حتی غلط می‌شود. 
+به عبارت دیگر
+مانند فرایند های منطقی
+\refnote{n20}
+هر جمله باید از جملات قبلی و یا اصول پایه نتیجه گرفته شود.
 
 \Nnote{n45}
 یکی از چراغ خطرهای در طول اثبات استفاده از «و .../و غیره/...» است. این کلمات به خودی خود بد نیستند، اما زمانی که ما می‌توانیم از علایم اختصاری استفاده کنیم اثبات ما تمیزتر و خواناتر و به طور حتم به دور از ابهام می‌شود.
@@ -1387,8 +1392,8 @@ $ s = \sum_{i=1}^{n} {a_i} $
 بهتر است در صورتی که در اثبات خود از روش یا ایده مشخص و شناخته شده‌ای استفاده می‌کنید, (مثل ناوردایی - استقرا - برهان خلف - دوگانه شماری و...)آن را ذکر کنید تا دنبال کردن اثبات شما برای خواننده راحت تر بشود و اثبات شما را بهتر متوجه بشود.
 
 \Enote{n49}
-اگر در نوشتن اثبات از رسم شکل استفاده می‌کنید, حذف کردن شکل نباید باعث ناقص شدن اثبات شما بشود, به عبارت دیگر شکل تنها باید به فهم بهتر اثبات کمک کند و نباید مستقیما برای اثبات استفاده شود
+اگر در نوشتن اثبات از رسم شکل استفاده می‌کنید, حذف کردن شکل نباید باعث ناقص شدن اثبات شما بشود, به عبارت دیگر شکل تنها باید به فهم بهتر اثبات کمک کند و نباید مستقیما برای اثبات استفاده شود.
 
-%\Enote(n50)
-%استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود
+\Enote{n50}
+استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود.
 \end{document}
