--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1341,7 +1341,8 @@ $n$
  	 توجه کنید در اثبات‌ها باید با استفاده از گام(ها) و فرض ، حکم را برای همه اعداد طبیعی ثابت کنید.
  	 
  	 
-\chapter*{0}
+\chapter*{
+نکات نوشتار}
 \notes
 \Nnote{n44}
 در حل سوالات توجه کنید هر گزاره، فرمول، اتحاد و... که درستی آن‌ها اثبات شده است  باید منبع معتبر آن ‌ذکر شود‌. این منابع می‌توان اسم عام آن، آدرس سوال و تمرینی که قبلا داده شده، مطالب داخل کلاس، جزوه و... باشد. 
@@ -1352,6 +1353,10 @@ $n$
 به عبارتی برای هر جمله به سوال «چرا؟» پاسخ دهید.
 چرا؟ :)
 چون استفاده از بعضی از جملات اعم از «بدیهی است» و مواردی که اشاره خواهیم کرد در طول اثبات باعث کژفهمی کلیت اثبات یا کامل به نظر رسیدن اثباتی ناقص و یا حتی غلط می‌شود. 
+به عبارت دیگر
+مانند فرایند های منطقی
+\refnote{n20}
+هر جمله باید از جملات قبلی و یا اصول پایه نتیجه گرفته شود.
 
 \Nnote{n45}
 یکی از چراغ خطرهای در طول اثبات استفاده از «و .../و غیره/...» است. این کلمات به خودی خود بد نیستند، اما زمانی که ما می‌توانیم از علایم اختصاری استفاده کنیم اثبات ما تمیزتر و خواناتر و به طور حتم به دور از ابهام می‌شود.
@@ -1387,8 +1392,61 @@ $ s = \sum_{i=1}^{n} {a_i} $
 بهتر است در صورتی که در اثبات خود از روش یا ایده مشخص و شناخته شده‌ای استفاده می‌کنید, (مثل ناوردایی - استقرا - برهان خلف - دوگانه شماری و...)آن را ذکر کنید تا دنبال کردن اثبات شما برای خواننده راحت تر بشود و اثبات شما را بهتر متوجه بشود.
 
 \Enote{n49}
-اگر در نوشتن اثبات از رسم شکل استفاده می‌کنید, حذف کردن شکل نباید باعث ناقص شدن اثبات شما بشود, به عبارت دیگر شکل تنها باید به فهم بهتر اثبات کمک کند و نباید مستقیما برای اثبات استفاده شود
+اگر در نوشتن اثبات از رسم شکل استفاده می‌کنید, حذف کردن شکل نباید باعث ناقص شدن اثبات شما بشود, به عبارت دیگر شکل تنها باید به فهم بهتر اثبات کمک کند و نباید مستقیما برای اثبات استفاده شود.
 
-%\Enote(n50)
-%استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود
+\Enote{n50}
+استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود.
+
+\chapter*{گراف}
+
+\question
+    ثابت کنید یک گراف ۳-منتظم رأس برشی دارد اگر و تنها اگر یال برشی داشته‌ باشد. 
+ \solution 
+ 
+ فرض کنید v یک راس برشی از گراف G است. چون گراف ۳-منتظم است پس با حذف v گراف به ۳ مولفه تقسیم می‌شود. همسایه‌های v را $ x, y, z  $ می‌نامیم. نشان می‌دهم هرکدام از یال‌ها برشی هستند.
+ 
+ بدون تغییر کلیت سوال یال vx را در نظر بگیرید. مثالا v را در مولفه‌ای در نظر بگیرید که y در آن قرار دارد. می‌دانیم که x با تنها گذر از v می‌تواند به y برسد یعنی در واقع وارد مولفه مزبور شود. پس vx یال برشی است.
+ 
+ برای طرف دوم می‌خواهیم ثابت کنیم؛ اگر گراف ۳-منتظم یال برشی داشته باشد، آنگاه راس برشی دارد.
+ عکس نقیض گزاره فوق را در نظر می‌گیریم.
+ 
+ عکس نقیض: اگر گراف ۳-منتظم راس برشی نداشته باشد، آنگاه یال برشی ندارد.
+ 
+ در قسمت اول دیدیم اگر راس برشی داشته باشیم پس یال برشی داریم. بنابراین اگر راس برشی نداشته باشیم، یال برشی هم نداریم.
+ 
+ عکس نقیض گزاره درست است. چون هر گزاره با عکس نقیض خود هم‌ارز است، پس گزاره اصلی هم درست است.
+ 
+ \notes
+ 
+ \Enote{n50}
+ در حل سوالات باید تمامی حالت‌هابی که ممکن است پیش بیاید را در نظر بگیریم. در اینجا با حذف v ممکن است گراف به ۲ مولفه همبندی تقسیم شود.
+ 
+ 
+ \refnote{n22}
+ گزاره «اگر گراف ۳-منتظم راس برشی داشته باشد، آنگاه یال برشی دارد.» را معادل $p \rightarrow q $ در نظر بگیرید.
+ 
+ گزاره «اگر گراف ۳-منتظم راس برشی نداشته باشد، آنگاه یال برشی ندارد.» معادل می‌شود با
+ . $ \neg p \rightarrow \neg q $ 
+ که این وارون گزاره فوق است و با هم هم‌ارز نیستند.
+ بنابراین نمی‌توان از گر راس برشی داشته باشیم پس یال برشی داریم نتیجه بگیریم گر راس برشی نداشته باشیم، یال برشی هم نداریم. 
+ \solution*{پاسخ صحیح} 
+ 
+    ابتدا ثابت می‌کنیم که اگر در این گراف رأس برشی داشته باشیم، یال برشی داریم.
+    
+    اگر k رأس برشی باشد، چون درجه آن 3 است، دو حالت داریم : 
+    
+    1)	به دو مؤلفه یال داشته باشد. در این صورت به یکی از مؤلفه‌ها 2 یال و به دیگری یک یال دارد و می‎‌توانیم گراف را به صورت شکل 1 رسم کنیم. بدون کاسته شدن از کلیت مسئله، مولفه‌ای که k به آن یک یال دارد را A و مولفه دیگر را B می‌نامیم. چون k برشی است پس از A به B فقط یک مسیر گذرا از k وجود دارد و چون از A به k نیز فقط یک یال وجود دارد، این یال برشی است.
+    
+    2)	در غیر این صورت اگر به سه مؤلفه یال داشته باشد، به هریک از 3 مؤلفه، یک یال دارد و می‎توانیم گراف را به صورت شکل 2 رسم کنیم. چون k برشی است و به هر مؤلفه فقط یک یال دارد، پس هرکدام از این یال‌ها نیز برشی هستند. 
+    
+    
+    
+    \includegraphics[width=15cm, height=3.5cm]{1.png}
+   
+   
+    سپس اثبات می‎کنیم که اگر یال برشی داشته باشیم، رأس برشی داریم.
+    
+    اگر u یال برشی باشد، می‌توانیم گراف را مانند شکل زیر رسم کنیم و چون یال u برشی است، بنابراین به جز u یال دیگری از رأس a (یک سر یال u در یک مؤلفه) به مؤلفه دیگر وجود ندارد. بنابراین رأس a نیز برشی است.
+    
+    \leftline{\includegraphics[width=3.3cm, height=2cm]{2.png}}
 \end{document}
