--- a/h2wp.tex
+++ b/h2wp.tex
@@ -541,7 +541,7 @@ $$ \binom{n}{k}+\binom{n}{k+1}=\binom{n+1}{k+1}$$
 \solution
 چون خوابیدم, فیلم هم ندیدم, پس چون فیلم ندیدم, تفریح هم نکردم, پس طبق شرط اول, من پولدار نیستم و کار دارم.
 \notes
-\Nnote{n19} بهتر است برای جلو گیری از اشتباه, از نوشتار منطقی استفاده کرده و فارسی ننویسیم.
+\Nnote{n19} بهتر است برای جلوگبری از اشتباه, از نوشتار منطقی استفاده کرده و فارسی ننویسیم.
 \Enote{n20} باید فقط از تبدیلات تعریف شده استفاده کرد و استفاده از تبدیلات دیگر بدون اثبات صحیح نیست, مثلا در اینجا فیلم ندیدن مستقیما تفریح نکردن را نتیجه نمی دهد.
 \solution*{پاسخ صحیح}
  
@@ -1448,4 +1448,39 @@ $ s = \sum_{i=1}^{n} {a_i} $
     اگر u یال برشی باشد، می‌توانیم گراف را مانند شکل زیر رسم کنیم و چون یال u برشی است، بنابراین به جز u یال دیگری از رأس a (یک سر یال u در یک مؤلفه) به مؤلفه دیگر وجود ندارد. بنابراین رأس a نیز برشی است.
     
     \leftline{\includegraphics[width=3.3cm, height=2cm]{2.png}}
+    
+    \question
+    
+    ثابت کنید در یک تورنمنت(گراف کامل سادهٔ جهت‌ دار) قویا همبند، به ازای هر $k$ به‌طوری که $3 \leq k \leq n$، دوری جهت‌دار وجود دارد.
+  
+  \solution
+  در یک گراف ساده‌ی جهت‌ دار همبند بین هر دو راس آن یک مسیر وجود دارد. برای یافتن دور جهت دار به طول $k$ به‌طوری که $3 \leq k \leq n$ باشد، کافی است مسیری به طول $ k-1 $ از راس دلخواه a به راس دلخواه b پیدا کنیم. از آنجایی که بین هر دو راس مسیر جهت دار وجود دارد، از  b به a نیز مسیر جهت دار وجود دارد. پس می‌توان دوری جهت دار به طول  $k$   پیدا کرد.
+  
+  \notes
+  
+  \refnote{n45}
+  هیچ جمله‌ای را بدیهی فرض نکنید! در اینجا باید ذکر شود چگونه مسیر به طول $ k-1 $ پیدا می‌شود.
+    
+  \Enote{n51}
+  همان طور که قبلا گفتیم هر عبارت باید نتیجه شده از عبارت قبلی باشد. عبارت آخر «پس می‌توان دوری جهت دار به طول  $k$   پیدا کرد.» از جملات قبلی نتیجه نمی‌شود.  مسیری به طول $ k-1 $ از راس دلخواه a به راس دلخواه b پیدا کرده است، از  b به a نیز مسیر جهت دار وجود دارد، ولی تضمینی نیست که طول آن یک باشد تا دور به طول    $k$  تشکیل شود.
+  
+\solution*{پاسخ صحیح}
+
+    روی k استقرا می‌زنیم و داریم:
+    
+    پایه: 3 = k . رأس v را در نظر بگیرید. اگر رئوسی که به v یال دارند را در مجموعه A و رئوسی که v به آن‌ها یال دارد را در مجموعه B قرار دهیم، با توجه به این که گراف قویاً همبند است، مجموعه‌های A و B تهی نیستند و رأس w در B وجود دارد که به رأس u در A یال دارد. بنابراین رئوس w و u و v دور به طول 3 تشکیل می‌دهند.
+    
+    
+    \leftline{\includegraphics[width=5.4cm, height=2.4cm]{4.png}} 
+    فرض: دور به طول k داریم.
+    
+    حکم: دور به طول k+1 داریم.
+    
+    دور به طول k را (با توجه به فرض استقرا) در نظر بگیرید. حال اگر رأس u خارج از این دور وجود داشته باشد که به رئوس داخل دور، هم یال ورودی و هم یال خروجی داشته باشد (حداقل یک یال ورودی و یک یال خروجی)، با توجه به این که گراف تورنومنت قویاً همبند است و u به تمام رئوس داخل دور یال ورودی یا خروجی دارد، رئوس x و y در این دور وجود دارند به طوری که x و y همسایه باشند و از x با یال خروجی به u برویم و با یال ورودی به y برگردیم. پس دور به طول k+1 هم داریم.
+    
+    در غیر این صورت، اگر رئوسی داشته باشیم که همه به رئوس داخل دور وارد می‌شوند (مجموعه (A و رئوسی داشته باشیم که همه از آن‌ها خارج می‌شوند (مجموعه ،(B چون گراف قویاً همبند است، پس حتماً از B به  A مسیر داریم. پس دور به طول k+1 داریم.
+    
+   
+   
+    \leftline{\includegraphics[width=6cm, height=3.2cm]{5.png}}
 \end{document}
