--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1339,8 +1339,8 @@ $n$
  	
 \Enote{n43}
  	 توجه کنید در اثبات‌ها باید با استفاده از گام(ها) و فرض ، حکم را برای همه اعداد طبیعی ثابت کنید.
- 	 
- 	 
+ 
+ 
 \chapter*{
 نکات نوشتار}
 \notes
@@ -1397,6 +1397,17 @@ $ s = \sum_{i=1}^{n} {a_i} $
 \Enote{n50}
 استفاده از مثال برای فهم بهتر اثبات یک حکم کلی اقدام خیلی خوبی است, اما نباید جایگزین اثبات اصلی بشود.
 
+\Enote{n50.5}
+ همواره دقت نمایید تا جملات استفاده شده به یکی از اشکال زیر باشد:
+
+\begin{enumerate}
+\item
+خود فرض مسئله باشد.
+\item
+به صورت كاملا شفاف و واضح از جملات قبلی نتیجه شده باشد.
+\item
+درستی آن قبلا اثبات شده باشد.
+ 	 \end{enumerate}
 \chapter*{گراف}
 
 \question
@@ -1417,7 +1428,7 @@ $ s = \sum_{i=1}^{n} {a_i} $
  
  \notes
  
- \Enote{n50}
+ \Enote{n51}
  در حل سوالات باید تمامی حالت‌هابی که ممکن است پیش بیاید را در نظر بگیریم. در اینجا با حذف v ممکن است گراف به ۲ مولفه همبندی تقسیم شود.
  
  
@@ -1425,7 +1436,7 @@ $ s = \sum_{i=1}^{n} {a_i} $
  گزاره «اگر گراف ۳-منتظم راس برشی داشته باشد، آنگاه یال برشی دارد.» را معادل $p \rightarrow q $ در نظر بگیرید.
  
  گزاره «اگر گراف ۳-منتظم راس برشی نداشته باشد، آنگاه یال برشی ندارد.» معادل می‌شود با
- . $ \neg p \rightarrow \neg q $ 
+  $ \neg p \rightarrow \neg q $ 
  که این وارون گزاره فوق است و با هم هم‌ارز نیستند.
  بنابراین نمی‌توان از گر راس برشی داشته باشیم پس یال برشی داریم نتیجه بگیریم گر راس برشی نداشته باشیم، یال برشی هم نداریم. 
  \solution*{پاسخ صحیح} 
@@ -1454,24 +1465,25 @@ $ s = \sum_{i=1}^{n} {a_i} $
     ثابت کنید در یک تورنمنت(گراف کامل سادهٔ جهت‌ دار) قویا همبند، به ازای هر $k$ به‌طوری که $3 \leq k \leq n$، دوری جهت‌دار وجود دارد.
   
   \solution
-  در یک گراف ساده‌ی جهت‌ دار همبند بین هر دو راس آن یک مسیر وجود دارد. برای یافتن دور جهت دار به طول $k$ به‌طوری که $3 \leq k \leq n$ باشد، کافی است مسیری به طول $ k-1 $ از راس دلخواه a به راس دلخواه b پیدا کنیم. از آنجایی که بین هر دو راس مسیر جهت دار وجود دارد، از  b به a نیز مسیر جهت دار وجود دارد. پس می‌توان دوری جهت دار به طول  $k$   پیدا کرد.
+  در یک گراف ساده‌ی جهت‌ دار همبند بین هر دو راس آن یک مسیر وجود دارد. برای یافتن دور جهت دار به طول $k$ به‌طوری که $ 3 \leq k \leq n $ باشد، کافی است مسیری به طول $ k-1 $ از راس دلخواه a به راس دلخواه b پیدا کنیم. از آنجایی که بین هر دو راس مسیر جهت دار وجود دارد، از  b به a نیز مسیر جهت دار وجود دارد. پس می‌توان دوری جهت دار به طول  $k$   پیدا کرد.
   
   \notes
   
   \refnote{n45}
   هیچ جمله‌ای را بدیهی فرض نکنید! در اینجا باید ذکر شود چگونه مسیر به طول $ k-1 $ پیدا می‌شود.
     
-  \Enote{n51}
-  همان طور که قبلا گفتیم هر عبارت باید نتیجه شده از عبارت قبلی باشد. عبارت آخر «پس می‌توان دوری جهت دار به طول  $k$   پیدا کرد.» از جملات قبلی نتیجه نمی‌شود.  مسیری به طول $ k-1 $ از راس دلخواه a به راس دلخواه b پیدا کرده است، از  b به a نیز مسیر جهت دار وجود دارد، ولی تضمینی نیست که طول آن یک باشد تا دور به طول    $k$  تشکیل شود.
+  \refnote{n50.5}
+  همان طور که قبلا گفتیم هر عبارت باید نتیجه شده از عبارت قبلی باشد. عبارت آخر «پس می‌توان دوری جهت دار به طول  $k$   پیدا کرد.» از جملات قبلی نتیجه نمی‌شود.  در اینجا مسیری به طول $ k-1 $ از راس دلخواه a به راس دلخواه b پیدا شده است، از  b به a نیز مسیر جهت دار وجود دارد، ولی تضمینی نیست که طول آن یک باشد تا دور به طول    $k$  تشکیل شود.
   
 \solution*{پاسخ صحیح}
 
     روی k استقرا می‌زنیم و داریم:
-    
+   
     پایه: 3 = k . رأس v را در نظر بگیرید. اگر رئوسی که به v یال دارند را در مجموعه A و رئوسی که v به آن‌ها یال دارد را در مجموعه B قرار دهیم، با توجه به این که گراف قویاً همبند است، مجموعه‌های A و B تهی نیستند و رأس w در B وجود دارد که به رأس u در A یال دارد. بنابراین رئوس w و u و v دور به طول 3 تشکیل می‌دهند.
     
     
     \leftline{\includegraphics[width=5.4cm, height=2.4cm]{4.png}} 
+    
     فرض: دور به طول k داریم.
     
     حکم: دور به طول k+1 داریم.
@@ -1483,9 +1495,8 @@ $ s = \sum_{i=1}^{n} {a_i} $
    
    
     \leftline{\includegraphics[width=6cm, height=3.2cm]{5.png}}
-<<<<<<< HEAD
-=======
-    
+
+
     \question
 
     ثابت گنید تعداد گراف‌های ساده با مجموعهٔ رأس‌های $\{v_{1}, v_{2}, \dots, v_{n}\}$  که درجهٔ هریک از رأس‌های آن‌ها زوج است، برابر است با $2^{{n-1}\choose{2}}$.
@@ -1531,8 +1542,7 @@ $n-1$
     A به B : نشان می دهیم امکان ندارد با اضافه کردن رأس $v_n$ به دو گراف متمایز $a_1$ و $a_2$ از ،A به گراف یکسان b از B برسیم. از برهان خلف  استفاده می کنیم و فرض می کنیم با اضافه کردن رأس $v_n$ به دو گراف متمایز $a_1$ و $a_2$ ، به گراف یکسان b برسیم ( با وجود یکسان بودن گراف های مقصد، آن دو را $b_1$ و $b_2$ می نامیم) . بنابراین رأس $v_n$ در هر دو گراف $b_1$ و $b_2$ با یال های یکسانی وجود دارد و با حذف آن به دو گراف یکسان $a_1$ و $a_2$ می رسیم که با فرض متمایز بودن آن دو تناقض دارد. پس با اضافه کردن رأس $v_n$ به هر دو گراف متمایز از ،A به دو گراف متمایز از B می رسیم.\\
     B به A : با توجه به استدلال بالا و هم چنین چون رئوس برچسب دارند؛ برای هر دو گراف متمایزی، زیر گراف القایی رئوس $v_1$ تا $v_{n-1}$ آن ها از هم متمایز است.
     
-    پس چون بین اعضای این دو مجموعه تناظر یک به یک وجود دارد، $2^{{n-1}\choose{2}}$ = |B|
+    پس چون بین اعضای این دو مجموعه تناظر یک به یک وجود دارد، 
+    $2^{{n-1} \choose{2}}$ = |B|
  
- \question
->>>>>>> cf2342c4071bbc95a813addf99c59691297e9a75
 \end{document}
