add q6.4 and notes XLVIII XLIX to chapter0

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1408,6 +1408,10 @@ $ s = \sum_{i=1}^{n} {a_i} $
 \item
 درستی آن قبلا اثبات شده باشد.
  	 \end{enumerate}
+ 	 
+ \Enote{n50.75}
+ در طول اثبات به هیچ عنوان به شهود اکتفا نکنید. شهود به هیچ عنوان ارزش ریاضی ندارد.
+ 
 \chapter*{گراف}
 
 \question
@@ -1544,5 +1548,40 @@ $n-1$
     
     پس چون بین اعضای این دو مجموعه تناظر یک به یک وجود دارد، 
     $2^{{n-1} \choose{2}}$ = |B|
+ 
+ \question
+
+    گراف همبند و بی‌جهت $G$ را در نظر بگیرید. ثابت کنید می‌توانیم یال‌های این گراف را به صورتی جهت ‌دهی کنیم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک شود.
+ 
+ \solution
+از استقرا استفاده می‌کنیم.
+
+پایه: برای گراف‌های با $ n = 1 , n=2 $ راس، واضح است که می‌توانیم یال‌های این گراف را به صورتی جهت ‌دهی کنیم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک شود.
+
+فرض: گراف $n-1 $ راسی را در نظر بگیرید که حکم برای آن درست است.
+
+حکم: می‌خواهیم ثابت کنیم گراف n راسی را می‌توانیم به صورتی جهت ‌دهی کنیم که تفاضل درجه‌ی ورودی و خروجی هر راس آن، حداکثر یک شود. 
+   
+   اثبات: گراف $n-1 $ راسی را در نظر بگیرید. طبق فرض استقرا یال‌های این گراف را به صورتی جهت ‌دهی کرده‌ایم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک است. به این گراف راس $ n$ام را اضافه می‌کنیم. این راس به هر یک از راس‌ها حداکثر یک یال دارد.  هر یال راس n را در نظر بگیرید. آن را $v_in$ می‌نامیم. اگر تا پیش از این تعداد یال‌های ورودی و خروجی راس $v_i$ برابر بود، یال را دلخواه جهت گذاری می‌کنیم. در غیراین صورت چون اختلاف درجه‌ی ورودی و خروجی راس $v_i$ یک است جهت یال $v_in$ را طوری انتخاب می‌کنیم که این اختلاف صفر شود.
+ بنابراین برای گراف n راسی هم حکم ثابت شد.  
+   \notes
+   
+   \Enote{n53}
+   اثبات ناقص است. باید توجه کنیم که شرایط سوال برای راس $ n$ام برقرار نمی‌شود. به طور کلی در اثبات از روش استقرا، درستی شرایط برای راس یا یالی که اضافه می‌شود را در نظر بگیرید.
+     
+    \solution
+    گراف با راس‌های $\{ v_1, v_2, ... , n_n \}$ را داریم. تمام یال‌های $v_1 $ را به طور دلخواه جهت دهی می‌کنیم طوری که شرایط سوال برقرار باشد. به سراغ راس
+     $ v_2 $  
+    می‌رویم و یال‌های آن را جهت دهی می‌کنیم. همین کار را انجام می‌دهیم تا مثلا در راس $v_i$ امکان این شرایط نیست. در اینجا به یکی از همسایه‌های  $v_i$ می‌رویم که اختلاف درجه ورودی و خروجی آن صفر است. سپس جهت یال مشترکشان را عوض می‌کنیم. اختلاف درجه ورودی و خروجی راس همسایه برابر یک می‌شود و حال امکان برقراری شرایط برای $v_i$ وجود دارد. به همین ترتیب تا راس $ v_n $ پیش می‌رویم و در نهایت یال‌های گراف را طوری جهت داده‌ایم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک است.
+    
+    \notes
+    
+    \refnote{50.75}
+        
+    \solution*{پاسخ صحیح} 
+    
+    اگر درجه تمامی رئوس گراف زوج باشد که می‌توان گذر اویلری در آن ایجاد کرد که پس از آن اگر یال‌ها را طبق جهت پیموده شده جهت‌دهی کنیم، حکم ثابت است وگرنه $2k$ تا راس درجه فرد وجود دارند که دو به دو بین آن‌ها یال اضافه می‌کنیم و پس از آن درجه تمامی رئوس زوج خواهد بود و مانند قبل یال‌ها را جهت می‌دهیم. پس از این مرحله با حذف یال‌های اضافه شده، در راس‌های با درجه فرد اختلاف درجه ورودی و خروجی یک خواهد بود و در بقیه راس‌ها صفر خواهد بود. به این ترتیب درستی حکم اثبات می‌شود.
+    
+
  
 \end{document}
