--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1383,7 +1383,10 @@ $ s = \sum_{i=1}^{n} {a_i} $
 \end{enumerate}
 
 \Nnote{n46}
-تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید یا به شکل عبارات و معادلات ریاضی بنویسید. در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا و نظریه اعداد حتما اصول را رعایت کنید.
+تا آن‌جا که می‌توانید جملات، عبارات ریاضی و گزاره‌ها را فارسی ننویسید. از گزاره‌های منطقی استفاده کنید یا به شکل عبارات و معادلات ریاضی بنویسید. 
+
+\Enote{n46.5}
+در مباحثی که مدل نوشتاری خاص وجود دارد مثل استقرا، ناوردایی و نظریه اعداد حتما اصول را رعایت کنید.
 
 \Enote{n47}
 از نوشتن عبارت هایی مثل "بهترین حالت این است که" یا "در بدترین حالت داریم که..." پرهیز کنید. توجه کنید که بهترین و بدترین و مفاهیمی از این دست, در ریاضیات معنایی ندارند مگر آن که آن‌ها را تعریف کنید و توضیح بدهید که چرا در نظر گرفتن این حالت به حل مسئله کمک می‌کند.
@@ -1581,7 +1584,45 @@ $n-1$
     \solution*{پاسخ صحیح} 
     
     اگر درجه تمامی رئوس گراف زوج باشد که می‌توان گذر اویلری در آن ایجاد کرد که پس از آن اگر یال‌ها را طبق جهت پیموده شده جهت‌دهی کنیم، حکم ثابت است وگرنه $2k$ تا راس درجه فرد وجود دارند که دو به دو بین آن‌ها یال اضافه می‌کنیم و پس از آن درجه تمامی رئوس زوج خواهد بود و مانند قبل یال‌ها را جهت می‌دهیم. پس از این مرحله با حذف یال‌های اضافه شده، در راس‌های با درجه فرد اختلاف درجه ورودی و خروجی یک خواهد بود و در بقیه راس‌ها صفر خواهد بود. به این ترتیب درستی حکم اثبات می‌شود.
+ 
+ \question
+  
+    ثابت کنید برای هر گراف $G$، زیرگراف دو بخشی $H$ای وجود دارد که 
+     $e_{(H)} > \frac{e_{(G)}}{2}$
+     باشد. 
     
+  
+  \solution 
+   
+   گراف $G$ با $ n$ را در نظر می‌گیریم. راس دلخواه $v$ را از این گراف برمی‌داریم. فرض می‌کنیم برای $n-1 $ راس زیر گراف دوبخشی وجود دارد که شامل بیش از نیمی از یال‌های گراف اصلی است. حال باید راس  $v$ را به یکی از این دو بخش طوری اضافه کنیم که تعداد یال‌هایی که بین $v$ و راس‌ها در بخش اضافه شده است کمتر از تعداد یال‌هایی که بین $v$ و بخش دیگر گراف وجود دارند باشد.
+   
+   برای این کار می‌توان، تعداد یال‌هایی که راس $v$ با بخش اول می‌تواند بسازد را با تعداد یال‌هایی که $v$ با بخش دوم می‌سازد مقایسه کنید. اگر تعداد یال‌های $v$  با بخش اول بیشتر $v$ را به بخش دوم و اگر برعکس بود $v$ را به بخش اول اضافه می‌کنیم و اگر مساوی بودند فرقی نمی‌کند به کدام اضافه کنیم.
+   
+   $v$ 
+   را به بخش مورد نظر اضافه می‌کنیم و یال‌های متصل از $v$ به بخش دیگر را رسم می‌نماییم. به این ترتیب مطمئن هستیم حکم سوال برقرار است.
+   
+  \notes
+  
+  \refnote{n46.5}
+  زمانی که در حل سوال از یک حالت (مثلا گراف $ n$ راسی) به حالتی کوچکتر (گراف $n-1 $ راسی) می‌رسیم و فرض می‌کنیم حکم برای حالت کوچکتر درست است؛ به معنی این است که از استقرا استفاده می‌کنیم. بنابراین رعایت مدل نوشتار استقرا شامل پایه، فرض استقرا و حکم استقرا الزامی است.
+    
+   
+ \Tnote{n54}
+ سوال برای حالت بزرگتر مساوی اثبات شده است.
+ 
+ 
+\solution*{پاسخ صحیح}
+    
+   به صورت دلخواه راس های گراف $G$ را به دو دسته تقسیم می‌کنیم، سپس در هر مرحله یک راس که تعداد یال‌هایی که با راس‌های هم گروه خود دارد از تعداد یال‌هایی که با راس‌های گروه دیگر دارد بیشتر است را انتخاب می‌کنیم و آن را به گروه دیگر منتقل می‌کنیم. با استفاده از ناوردایی نشان می‌دهیم؛ بعد از تعداد متناهی مرحله، به حالتی از دسته‌بندی راس‌ها می‌رسیم که دیگر راسی برای جابجایی وجود ندارد.
+   
+   مقدار ناوردا: تعداد یال‌های بین دو گروه.
+   
+   گام ناوردا: با هر بار تکرار مرحله بالا تعداد یال‌های بین دو گروه در هر مرحله حداقل یک واحد افزایش می‌یابد. پس ناوردای افزایشی داریم.
+   
+     حال چون تعداد کل یال‌های گراف ثابت است و ناوردا نمی‌تواند از این تعداد بیشتر شود؛ پس، بعد از تعداد متناهی مرحله، به حالتی از دسته‌بندی راس‌ها می‌رسیم که دیگر راسی برای جابجایی وجود ندارد. 
+     
+     در اینجا اگر تعداد یال‌هایی که دو سر آن‌ها در یک گروه است، از تعداد بقیه یال‌ها کمتر باشد، با حذف این یال‌ها، گراف خواسته شده $H$ به دست آمده است. در غیر این صورت، برای تمام راس‌های گراف، تعداد یال‌هایی که سر دیگر آن‌ها در گروه دیگر است با تعداد یال‌هایی که سر دیگر آن‌ها در همان گروه است برابر است و به این ترتیب تعداد یال‌های بین دو گروه دقیقا برابر تعداد یال‌هایی است که دو سر آن هم گروه‌ هستند. در اینجا یک یال دلخواه $AB$ که گروه راس‌های $A$و$B$ متفاوت است را انتخاب می‌کنیم، حال گروه راس $A$ را عوض می‌کنیم و به این ترتیب تعداد یال‌های بین دو گروه ثابت می‌ماند و دو سر یال $AB$ در یک گروه است در حالی که وضعیت بقیه یال‌های متصل به راس $B$ ثابت مانده است، حال تعداد یال‌هایی که راس $B$ با رئوس هم گروه خود دارد یک واحد بیشتر از تعداد یال‌هایی است که با راس‌های گروه دیگر دارد و به این ترتیب با انتقال این راس به گروه دیگر، تعداد یال‌های بین دو گروه یک واحد بیشتر می‌شود و همچنین تعداد آن از بقیه یال‌ها هم بیشتر می‌شود پس با حذف یال‌هایی که دو سر آن‌ها در یک گروه هستند که تعداد آن‌ها کمتر از نصف تعداد کل یال‌ها در گراف $G$ است، به گراف خواسته شده $H$ می‌رسیم.
+       
 
  
 \end{document}
