--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1412,7 +1412,7 @@ $ s = \sum_{i=1}^{n} {a_i} $
 درستی آن قبلا اثبات شده باشد.
  	 \end{enumerate}
  	 
- \Enote{n50.75}
+ \Enote{n50.7}
  در طول اثبات به هیچ عنوان به شهود اکتفا نکنید. شهود به هیچ عنوان ارزش ریاضی ندارد.
  
 \chapter*{گراف}
@@ -1579,7 +1579,8 @@ $n-1$
     
     \notes
     
-    \refnote{50.75}
+    \refnote{n50.7}
+    
         
     \solution*{پاسخ صحیح} 
     
