--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1575,7 +1575,7 @@ $n-1$
     \solution
     گراف با راس‌های $\{ v_1, v_2, ... , n_n \}$ را داریم. تمام یال‌های $v_1 $ را به طور دلخواه جهت دهی می‌کنیم طوری که شرایط سوال برقرار باشد. به سراغ راس
      $ v_2 $  
-    می‌رویم و یال‌های آن را جهت دهی می‌کنیم. همین کار را انجام می‌دهیم تا مثلا در راس $v_i$ امکان این شرایط نیست. در اینجا به یکی از همسایه‌های  $v_i$ می‌رویم که اختلاف درجه ورودی و خروجی آن صفر است. سپس جهت یال مشترکشان را عوض می‌کنیم. اختلاف درجه ورودی و خروجی راس همسایه برابر یک می‌شود و حال امکان برقراری شرایط برای $v_i$ وجود دارد. به همین ترتیب تا راس $ v_n $ پیش می‌رویم و در نهایت یال‌های گراف را طوری جهت داده‌ایم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک است.
+    می‌رویم و یال‌های آن را جهت دهی می‌کنیم. همین کار را برای سایر راس‌ها انجام می‌دهیم. در صورتی که به راس $v_i$ای رسیدیم که نمی‌توانستیم یال‌های آن را متناسب با این شرایط جهت دهی کنیم، به یکی از همسایه‌های  $v_i$ می‌رویم که اختلاف درجه ورودی و خروجی آن صفر است. سپس جهت یال مشترکشان را عوض می‌کنیم. اختلاف درجه ورودی و خروجی راس همسایه برابر یک می‌شود و حال امکان برقراری شرایط برای $v_i$ وجود دارد. به همین ترتیب تا راس $ v_n $ پیش می‌رویم و در نهایت یال‌های گراف را طوری جهت داده‌ایم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک است.
     
     \notes
     
